feat: complete CML07 iOS capabilities
